basic auth in skeleton

--- a/www/templates/tab-landing.html
+++ b/www/templates/tab-landing.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Landing Page">
   <ion-content class="padding">
   <h1>YOU ARE HOME</h1>
+  <button ng-click="authenticate('google')">Sign In</button>
+  <button ng-click='signOut()'>Sign Out</button>
     <!-- <div class="list card">
       <div class="item item-divider">Recent Updates</div>
       <div class="item item-body">
