Fix icon for Home status button and revert poopsandwich back to tab-landing

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,8 +7,8 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios7-home" icon-on="ion-ios7-home-strong" href="#/tab/dash">
-    <ion-nav-view name="poopsandwich"></ion-nav-view>
+  <ion-tab title="Status" icon-off="ion-ios7-home-outline" icon-on="ion-ios7-home" href="#/tab/dash">
+    <ion-nav-view name="tab-landing"></ion-nav-view>
   </ion-tab>
 
 
