--- a/www/templates/tab-landing.html
+++ b/www/templates/tab-landing.html
@@ -3,6 +3,9 @@
   <h1>YOU ARE HOME</h1>
   <button ng-click="signIn()">Sign In</button>
   <button ng-click="signOut()">Sign Out</button>
+  <div ng=show"currentUser">
+    {{currentUser}}
+  </div>
     <!-- <div class="list card">
       <div class="item item-divider">Recent Updates</div>
       <div class="item item-body">
