updated icons and links. fixed current user

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,19 +13,19 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Messages" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
+  <ion-tab title="Activity" icon-off="ion-ios7-checkmark-outline" icon-on="ion-ios7-checkmark" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
   <!-- Friends Tab -->
-  <ion-tab title="Payments" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
+  <ion-tab title="Payments" icon-off="ion-social-usd" icon-on="ion-social-usd" href="#/tab/friends">
     <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Account Tab -->
-  <ion-tab title="Profile" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Profile" icon-off="ion-person" icon-on="ion-person" href="#/tab/profile">
+    <ion-nav-view name="tab-profile"></ion-nav-view>
   </ion-tab>
 
 
