--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,5 +1,8 @@
-<ion-view view-title="Chats">
-  <ion-content>
+<ion-view view-title="Activity">
+<ion-nav-buttons side="left">
+  <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()"></button>
+</ion-nav-buttons>
+  <ion-content class="has-header">
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
         <img ng-src="{{chat.face}}">
