--- a/www/templates/tab-landing.html
+++ b/www/templates/tab-landing.html
@@ -1,6 +1,8 @@
 <ion-view view-title="Landing Page">
 <ion-content class="padding">
   <div class="row row-top">
+    <div class="col">
+    </div>
   </div>
   <div class="row row-bottom">
     <div class="col">
