--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,8 +1,29 @@
-<ion-view view-title="Account">
-<ion-content>
+<ion-view view-title="Profile">
+<ion-content class="profile">
+<div class="row" id="profile-header">
+  <div class="col col-100">
+    <img id="profileImage" src="https://lh6.googleusercontent.com/-HnwngPrmnwg/AAAAAAAAAAI/AAAAAAAAEBc/eK_JEkkF8PU/photo.jpg?sz=150" />
+  </div>
+</div>
 <div class="row">
-  <div style="text-align: center;" class="col col-100">
-    <img src="{{userImageUrl}}"
+  <div class="col col-100" id="profile-info">
+    <h3>Brian Vogelgesang</h3>
+    <p>Something witty about me </p>
+  </div>
+</div>
+<div class="row" id="profile-icons">
+  <div class="col col-33">
+    <i class="ion-ios7-star"></i>
+    59
+  </div>
+  <div class="col col-33">
+    <i class="ion-ios7-chatbubble"></i>
+    22
+  </div>
+  <div class="col col-33">
+    <i class="ion-ios7-people"></i>
+    80
+  </div>
 </div>
 </ion-content>
 </ion-view>
