--- a/www/css/style.css
+++ b/www/css/style.css
@@ -7,8 +7,12 @@
   /*border: 1px dashed black;*/
 }
 
+#modalBackButton {
+  font-size: 35px;
+}
+
 #profile-info {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid black;
   margin-left: 5%;
   margin-right: 5%;
   margin-bottom: 5%;
@@ -16,11 +20,11 @@
 
 .profile {
   text-align: center;
-  color: white;
+  color: black;
 }
 
 .profile h3 {
-  color: white;
+  color: black;
 }
 
 .profile i {
@@ -32,21 +36,4 @@
 
 }
 
-.profile:before {
-  content: "";
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: -1;
 
-  display: block;
-  background-image: url('https://lh6.googleusercontent.com/-HnwngPrmnwg/AAAAAAAAAAI/AAAAAAAAEBc/eK_JEkkF8PU/photo.jpg?sz=550');
-  width: 100%;
-  height: 100%;
-
-  -webkit-filter: blur(20px);
-  -moz-filter: blur(20px);
-  -o-filter: blur(20px);
-  -ms-filter: blur(20px);
-  filter: blur(20px);
-}
