--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,6 +1,9 @@
 <ion-view view-title="Activity">
 <ion-nav-buttons side="left">
-  <button class="button button-icon button-clear ion-navicon" ng-click="toggleLeft()"></button>
+  <button class="button button-icon button-clear ion-navicon" ng-click="openFilterModal()"></button>
+</ion-nav-buttons>
+<ion-nav-buttons side="right">
+  <button class="button button-icon button-clear ion-plus" ng-click="openMessageModal()"></button>
 </ion-nav-buttons>
   <ion-content class="has-header">
     <ion-list>
