--- a/www/templates/testing.html
+++ b/www/templates/testing.html
@@ -27,7 +27,9 @@
 </div>
 <div class="row">
   <span>His name is {{auth.profile.nickname}}</span>
-  <div class="col col-100"><input type="submit" ng-click="logout()" value="Log out" /></div>
+  <div class="col col-100">
+    <button class="button button-positive button-block" ng-click="logout()">
+  </div>
 </div>
 </ion-content>
 </ion-view>
