--- a/www/templates/friend-detail.html
+++ b/www/templates/friend-detail.html
@@ -11,5 +11,8 @@ The Friends service returns an array of friend data
     <p>
       {{friend.notes}}
     </p>
+   <!--  <a ui-sref="tab.friend-detail.info">show info</a>
+    <ion-nav-view name="info"></ion-nav-view> -->
+
   </ion-content>
 </ion-view>
