can successfull hit API as authed user

--- a/www/templates/testing.html
+++ b/www/templates/testing.html
@@ -26,9 +26,9 @@
   </div>
 </div>
 <div class="row">
-  <span>His name is {{auth.profile.nickname}}</span>
-  <div class="col col-100">
-    <button class="button button-positive button-block" ng-click="logout()">
+  <span>{{Users}}</span>
+  <div class="col col-100"><br>
+    <button class="button button-positive button-block" ng-click="callApi()">Test API</button>
   </div>
 </div>
 </ion-content>
