--- a/www/templates/testing.html
+++ b/www/templates/testing.html
@@ -26,10 +26,10 @@
   </div>
 </div>
 <div class="row">
-  <span>{{Users}}</span>
   <div class="col col-100"><br>
-    <button class="button button-positive button-block" ng-click="callApi()">Test API</button>
+    <button class="button button-positive button-block" ng-click="callApi()">Test API</button><button class="button button-positive button-block" ng-click="logout()">Logout</button>
   </div>
+  <span>{{Users}}</span>
 </div>
 </ion-content>
 </ion-view>
