Refactor the tabs.html slightly to correctly point the tabs-housemates to newly created skeleton view for housemates

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,8 +24,8 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Account Tab -->
-  <ion-tab title="Profile" icon-off="ion-person" icon-on="ion-person" href="#/tab/profile">
-    <ion-nav-view name="tab-profile"></ion-nav-view>
+  <ion-tab title="Housemates" icon-off="ion-person" icon-on="ion-person" href="#/tab/housemates">
+    <ion-nav-view name="tab-housemates"></ion-nav-view>
   </ion-tab>
 
 
