Set up payments factory, edited controller and updated app.js to have payment tab point to new view; WARNING: controler in .get request for paymentService needs to be fixed as the request url is not accessing back end data

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -18,8 +18,8 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Friends Tab -->
-  <ion-tab title="Payments" icon-off="ion-social-usd" icon-on="ion-social-usd" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
+  <ion-tab title="Payments" icon-off="ion-social-usd" icon-on="ion-social-usd" href="#/tab/payments">
+    <ion-nav-view name="tab-payments"></ion-nav-view>
   </ion-tab>
 
 
