--- a/www/templates/features/tab-payments.html
+++ b/www/templates/features/tab-payments.html
@@ -1,5 +1,12 @@
 <ion-view view-title="Payments">
 <ion-content class="payments">
-{{payments}}
+  <label class="item item-input">
+    <span class="input-label">Recipient</span>
+    <input type="email">
+  </label>
+  <label class="item item-input">
+    <span class="input-label">Payment Amount</span>
+    <input type="number">
+  </label>
 </ion-content>
 </ion-view>
