--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -24,7 +24,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Account Tab -->
-  <ion-tab title="Housemates" icon-off="ion-person" icon-on="ion-person" href="#/tab/housemates">
+  <ion-tab title="Housemates" icon-off="ion-ios7-people" icon-on="ion-ios7-people" href="#/tab/housemates">
     <ion-nav-view name="tab-housemates"></ion-nav-view>
   </ion-tab>
 
