Create addHousemateModal.html, make addHousemateModal link to new ionic modal

--- a/www/templates/features/tab-housemates.html
+++ b/www/templates/features/tab-housemates.html
@@ -1,4 +1,7 @@
 <ion-view view-title="Housemates">
+<ion-nav-buttons side="right">
+  <button class="button button-icon button-clear ion-plus" ng-click="openAddHousemateModal()"></button>
+</ion-nav-buttons>
 <ion-content class="housemates">
 <!--   <div class="row housemates">
     <div class="col col-50 housemate">
