Add email field and button to Add New Housemates modal

--- a/www/templates/addHousemateModal.html
+++ b/www/templates/addHousemateModal.html
@@ -6,7 +6,15 @@
   <h1 class="title">Add New Housemate:</h1>
 </ion-header-bar>
   <ion-content>
-    HOLLAAA!!!
+    <div class="list">
+      <label class="item item-input">
+        <input type="text" placeholder="Email">
+      </label>
+<!--       <label class="item item-input">
+        <input type="text" placeholder="Email">
+      </label> -->
+      <a class="button button-icon icon ion-plus-circled" ng-click="newEmailInputField.show()"></a>
+    </div>
     <!-- content -->
   </ion-content>
 </ion-modal-view>
