--- a/www/templates/addHousemateModal.html
+++ b/www/templates/addHousemateModal.html
@@ -4,16 +4,17 @@
     <i id="modalBackButton" class="ion-chevron-left" ng-click="closeAddHousemateModal()"></i>
   </div>
   <h1 class="title">Add New Housemate:</h1>
+
 </ion-header-bar>
   <ion-content>
     <div class="list">
-      <label class="item item-input">
-        <input type="text" placeholder="Email">
+      <label class="item item-input" ng-repeat="field in newHousemates">
+        <input type="text" placeholder="Email" ng-model="field.email">
       </label>
-<!--       <label class="item item-input">
-        <input type="text" placeholder="Email">
-      </label> -->
-      <a class="button button-icon icon ion-plus-circled" ng-click="newEmailInputField.show()"></a>
+      <button class="button button-icon" ng-click="addNewHousemate()">
+        <i class="icon ion-plus-circled"> </i>
+      </button>
+
     </div>
     <!-- content -->
   </ion-content>
