--- a/www/templates/features/tab-development.html
+++ b/www/templates/features/tab-development.html
@@ -1,33 +1,40 @@
 <ion-view view-title="Development">
 <ion-content class="development">
 
-	<div class="bar bar-header">
-		<h1 class="title">House Controller</h1>
-	</div>
-	<div class="list">
-		<div ng-controller="HouseCtrl">
-			<button class="button button-balanced" ng-click="clickToCreate()">Create House</button>
-			<button class="button button-positive" ng-click="clickToGetHouse()">Get House</button>
+<h1 class="title">House Controller</h1>
+
+<div ng-controller='HouseCtrl'>
+	<div class="row">
+		<div class="col col-50">
+			<button class="button button-balanced" ng-click="clickToCreate()">
+				Create House
+			</button>
+		</div>
+		<div class='col col-50'>
+			<button class="button button-positive" ng-click="clickToGetHouse()">
+				Get House
+			</button>
 		</div>
 	</div>
+</div>
 
 
-	<div class="bar bar-subheader">
-		<h1 class="title">User Controller</h1>
-		<div ng-controller="UserCtrl">
-			<button class="button button-positive" ng-click="clickToGetUsers()">Get Users</button>
-				<form ng-submit="getUser(userId)">
-					<div class="list list-inset">
-						<label class="item item-input">
-							<input ng-model="userId" type="number" placeholder="User ID">
-						</label>
-						<label class="item item-submit">
-							<input type="submit">
-						</label>
-						
-					</div>
-				</form>
+
+<h1 class="title">User Controller</h1>
+<div ng-controller="UserCtrl">
+	<button class="button button-positive" ng-click="clickToGetUsers()">Get Users</button>
+	<form ng-submit="getUser(userId)">
+		<div class="list list-inset">
+			<label class="item item-input">
+				<input ng-model="userId" type="number" placeholder="User ID">
+			</label>
+			<label class="item item-submit">
+				<input type="submit">
+			</label>
+			
 		</div>
-	</div>
+	</form>
+</div>
+
 </ion-content>
 </ion-view>
