added plugs, got ng_cordera working with InAppBrowser. Removed ios Build folder

--- a/www/templates/features/tab-landing.html
+++ b/www/templates/features/tab-landing.html
@@ -10,5 +10,10 @@
       THIS IS HOME
     </div>
   </div>
+  <div class="row">
+      <div class='col'>
+        <button class="button button-positive button-block" ng-click="logout()">Logout</button>
+      </div>
+    </div>
 </ion-content>
 </ion-view>
