--- a/www/templates/features/tab-payments.html
+++ b/www/templates/features/tab-payments.html
@@ -8,5 +8,8 @@
     <span class="input-label">Payment Amount</span>
     <input type="number">
   </label>
+  <a href="#" class="button button-positive button-block" ng-click="venmoLogin()">
+    Login to Venmo
+  </a>
 </ion-content>
 </ion-view>
