--- a/www/templates/testing.html
+++ b/www/templates/testing.html
@@ -27,7 +27,8 @@
 </div>
 <div class="row">
   <div class="col col-100"><br>
-    <button class="button button-positive button-block" ng-click="callApi()">Test API</button><button class="button button-positive button-block" ng-click="logout()">Logout</button>
+    <button class="button button-positive button-block" ng-click="callApi()">Test API</button>
+    <button class="button button-positive button-block" ng-click="logout()">Logout</button>
   </div>
   <span>{{Users}}</span>
 </div>
