--- a/www/templates/features/tab-development.html
+++ b/www/templates/features/tab-development.html
@@ -2,7 +2,6 @@
 <ion-content class="development">
 
 <h1 class="title">House Controller</h1>
-
 <div ng-controller='HouseCtrl'>
 	<div class="row">
 		<div class="col col-50">
@@ -35,6 +34,26 @@
 		</div>
 	</form>
 </div>
+
+
+<h1 class="title">Payment Controller</h1>
+<div ng-controller="PaymentCtrl">
+	<button class="button button-positive" ng-click="clickToGetPayments()">Get Payments</button>
+	
+	<form ng-submit="getPayment(paymentId)">
+		<div class="list list-inset">
+			<label class="item item-input">
+				<input ng-model="paymentId" type="number" placeholder="Payment ID">
+			</label>
+			<label class="item item-submit">
+				<input type="submit">
+			</label>
+			
+		</div>
+	</form>
+</div>
+
+
 
 </ion-content>
 </ion-view>
