Added css styling for the welcome page; Cleaned up controllers and app.js for given tabs by the template

--- a/www/templates/features/tab-welcome.html
+++ b/www/templates/features/tab-welcome.html
@@ -2,6 +2,6 @@
   <h1 class="title">Our House</h1>
 </div>
 
-<button class="button button-balanced">
+<button id="welcome-button" class="button button-balanced">
   Sign in with Google+
 </button>
