--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -33,5 +33,9 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-development"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Welcome" icon-off="ion-ios-flask-outline" icon-on="ion-ios-flask" href="#/tab/welcome">
+    <ion-nav-view name="tab-welcome"></ion-nav-view>
+  </ion-tab>
+
 
 </ion-tabs>
