Renamed UserCtrl to HousemateController, updated everywhere that UserCtrl was being used and replace with HousematesCtrl, removed Hans refactor in app.js and in services.js, updated HousematesView, updates Housemates controller to pull Housemate data from server. Cleaned up Payments server call and removed VenmoAuth template call since it is not being used

--- a/www/templates/features/tab-development.html
+++ b/www/templates/features/tab-development.html
@@ -20,7 +20,7 @@
 
 <!-- USER CONTROLLER -->
 <h1 class="title">User Controller</h1>
-<div ng-controller="UserCtrl">
+<div ng-controller="HousemateCtrl">
 	<button class="button button-positive" ng-click="clickToGetUsers()">Get Users</button>
 	<form ng-submit="getUser(userId)">
 		<div class="list list-inset">
