added logout button

--- a/www/templates/features/tab-development.html
+++ b/www/templates/features/tab-development.html
@@ -3,6 +3,7 @@
 
 <!-- HOUSE CONTROLLER -->
 <h1 class="title">House Controller</h1>
+<button class="button button-positive button-block" ng-click="logout()">Logout</button>
 <div ng-controller='HouseCtrl'>
 	<div class="row">
 		<div class="col col-50">
