--- a/www/templates/features/tab-landing.html
+++ b/www/templates/features/tab-landing.html
@@ -1,19 +1,11 @@
 <ion-view view-title="Welcome to OurHouse">
 <ion-content class="padding">
+<div class="add-house">
   <div class="row row-top">
     <div class="col">
       HOME?
     </div>
   </div>
-  <div class="row row-bottom">
-    <div class="col">
-      THIS IS HOME
-    </div>
-  </div>
-  <div class="row">
-      <div class='col'>
-        <button class="button button-positive button-block" ng-click="logout()">Logout</button>
-      </div>
-    </div>
+</div>
 </ion-content>
 </ion-view>
