Fix get User by id in development tab; Refactor paymentService get routes to use currentUser.id and house_id

--- a/www/templates/features/tab-development.html
+++ b/www/templates/features/tab-development.html
@@ -34,7 +34,7 @@
 <h1 class="title">User Controller</h1>
 <div ng-controller="HousemateCtrl">
 	<button class="button button-positive" ng-click="clickToGetUsers()">Get Users</button>
-	<form ng-submit="getUser(userId)">
+	<form ng-submit="getHousemate(userId)">
 		<div class="list list-inset">
 			<label class="item item-input">
 				<input ng-model="userId" type="number" placeholder="User ID">
