Added/Linked individual profile modal for Housemates img

--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -1,4 +1,11 @@
 <ion-view view-title="Profile">
+  <ion-header-bar class="bar-header">
+    <!-- <div class="buttons"> -->
+      <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeProfileModal()"></i>
+  <h1 class="title">Profile</h1>
+  </ion-header-bar>
+
+
 <ion-content class="profile">
 <div class="row" id="profile-header">
   <div class="col col-100">
