--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -13,7 +13,7 @@ navigation history that also transitions its views in and out.
 
 
   <!-- Chats Tab -->
-  <ion-tab title="Activity" icon-off="ion-ios7-checkmark-outline" icon-on="ion-ios7-checkmark" href="#/tab/chats">
+  <ion-tab title="Message" icon-off="ion-ios7-chatbubble-outline" icon-on="ion-ios7-chatbubble-outline" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
