--- a/www/templates/features/tab-housemates.html
+++ b/www/templates/features/tab-housemates.html
@@ -2,15 +2,16 @@
 <ion-nav-buttons side="right">
   <button class="button button-icon button-clear ion-plus" ng-click="openAddHousemateModal()"></button>
 </ion-nav-buttons>
+
 <ion-content class="housemates">
   <div ng-repeat="housemate in housemates">
     <div class="row" ng-if="$even">
       <div class="col col-50">
-          <img ng-src="{{housemates[$index].image}}?sz=115"/><br>
+          <img ng-click="openProfileModal()" ng-src="{{housemates[$index].image}}?sz=115"/><br>
           {{housemates[$index].name}}
       </div>
       <div class="col col-50">
-          <img ng-src="{{housemates[$index + 1].image}}?sz=115"/><br>
+          <img ng-click="openProfileModal()" ng-src="{{housemates[$index + 1].image}}?sz=115"/><br>
           {{housemates[$index + 1].name}}
       </div>
     </div>
