Create Messages tab

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,13 +11,12 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-landing"></ion-nav-view>
   </ion-tab>
 
-
-  <!-- Chats Tab -->
-  <ion-tab title="Activity" icon-off="ion-ios7-checkmark-outline" icon-on="ion-ios7-checkmark" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <!-- Create Message Tab -->
+  <ion-tab title="Message" icon-off="ion-ios7-email-outline" icon-on="ion-ios7-email-outline" href="#/tab/createmessages">
+    <ion-nav-view name="tab-createmessages"></ion-nav-view>
   </ion-tab>
 
-  <!-- Friends Tab -->
+  <!-- Payments Tab -->
   <ion-tab title="Payments" icon-off="ion-social-usd" icon-on="ion-social-usd" href="#/tab/payments">
     <ion-nav-view name="tab-payments"></ion-nav-view>
   </ion-tab>
