--- a/www/templates/tab-profile.html
+++ b/www/templates/tab-profile.html
@@ -2,7 +2,7 @@
   <ion-header-bar class="bar-header">
     <!-- <div class="buttons"> -->
       <i id="modalBackButton" class="ion-chevron-left icon" ng-click="closeProfileModal()"></i>
-  <h1 class="title">{{currentUserProfile.name}}</h1>
+  <h1 class="title">Profile</h1>
   </ion-header-bar>
 
 <ion-content class="profile">
