--- a/www/css/style.css
+++ b/www/css/style.css
@@ -44,3 +44,17 @@
   margin: 300px auto;
   margin-left: 80px;
 }
+
+
+/*.Activity {
+  background-color: rgba(74,135,238,0.1);
+}
+
+.Task {
+  background-color: rgba(102,204,51,0.1);
+}
+
+.Notif {
+  background-color: rgba(67,206,230,0.1);
+}
+*/
