Move createMessagesCtrl into MessageCtrl and renamed to CreateMessageCtrl; relinked CreateMessageCtrl in the app.js for its state; Will be attempting to link the form in create message.html to data

--- a/www/templates/features/tab-createmessages.html
+++ b/www/templates/features/tab-createmessages.html
@@ -8,21 +8,21 @@
 <ion-content>
   <div class="list">
     <label class="item item-radio">
-      <input type="radio" name="group">
+      <input type="radio" name="message" ng-model="task">
       <div class="item-content">
         Task
       </div>
       <i class="radio-icon ion-checkmark"></i>
     </label>
     <label class="item item-radio">
-      <input type="radio" name="group">
+      <input type="radio" name="message">
       <div class="item-content">
         Notification
       </div>
       <i class="radio-icon ion-checkmark"></i>
     </label>
     <label class="item item-radio">
-      <input type="radio" name="group">
+      <input type="radio" name="message">
       <div class="item-content">
         Activity
       </div>
