open close message detail

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -45,7 +45,7 @@
   margin-left: 80px;
 }
 
-/*.Activity {
+.Activity {
   background-color: rgba(74,135,238,0.1);
 }
 
@@ -56,7 +56,7 @@
 .Notif {
   background-color: rgba(67,206,230,0.1);
 }
-*/
+
 
 #profileImage {
   width: 50%;
